@@ -1,6 +1,7 @@
 Changes for 1.1beta12:
 
- - added support "proc.num[]" for AIX 4.x (Eugene)
+ - added support of "system.cpu.util[]" key for HPUX (Eugene)
+ - added support of "proc.num[]" key for AIX 4.x (Eugene)
  - added support of value type Text (Alexei) 
  - fixed "Server info" screen item (Eugene)
  - fixed "Host info" screen item (Eugene)
